more change for now

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <strong>Technical Reports</strong><br/>
                 <ul>
                 <li class="paper" words="superconductivity, lattice models, Hubbard model, tensor networks"><a href="/Papers/Senior_Honors_Thesis.pdf">An Investigation into Models of Cuprate Superconductivity</a>. Senior Honors Thesis under Professor Joel Moore at UC Berkeley</li>
-                <li class="paper" words="particle physics, colliders, magnets"><a href="/Papers/h190_paper.pdf"></a>Magnet Design in Collider Physics</a>. Senior Honors Thesis under Professor Joel Moore at UC Berkeley</li>
+                <li class="paper" words="particle physics, colliders, magnets"><a href="/Papers/h190_paper.pdf">Magnet Design in Collider Physics</a>. Expository report for honors class</li>
                 </ul>
             </div>
 
