--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -51,12 +52,20 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
-                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Mathi Raja</b></div><br>
-                <img src="img/mathi_prof_pic.jpg" alt="Profile Picture" style="width:90%; margin-top:10px; border-radius:5px;">
-                <!--<p><b>mailrmathi@gmail.com</b><br>-->
-                <br>
-              <dd><a href="https://github.com/mathiraja0">GitHub</a></dd> 
-              <dd><a href="htttps://www.linkedin.com/in/mathi-raja">LinkedIn</a></dd>
+              <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Mathi Raja</b></div><br>
+              <img src="img/mathi_prof_pic.jpg" alt="Profile Picture" style="width:90%; margin-top:10px; border-radius:5px;">
+              <!--<p><b>mailrmathi@gmail.com</b><br>-->
+              <br>
+              <dd>
+                  <a href="https://github.com/mathiraja0" target="_blank" style="text-decoration: none;">
+                      <i class="fab fa-github"></i> GitHub
+                  </a>
+              </dd>
+              <dd>
+                  <a href="https://www.linkedin.com/in/mathi-raja" target="_blank" style="text-decoration: none;">
+                      <i class="fab fa-linkedin"></i> LinkedIn
+                  </a>
+              </dd>
             </div>
     
             
@@ -86,7 +95,7 @@
                 <strong>Technical Reports</strong><br/>
                 <ul>
                 <li class="paper" words="superconductivity, lattice models, Hubbard model, tensor networks"><a href="/Papers/Senior_Honors_Thesis.pdf">An Investigation into Models of Cuprate Superconductivity</a>. Senior Honors Thesis under Professor Joel Moore at UC Berkeley</li>
-                <li class="paper" words="particle physics, colliders, magnets"><a href="/Papers/h190_paper.pdf">Magnet Design in Collider Physics</a>. Expository report for honors class</li>
+                <li class="paper" words="particle physics, colliders, dark matter"><a href="/Papers/h190_paper.pdf">Liquid Xenon Detectors for Dark Matter Searches</a>. Expository report for honors class</li>
                 </ul>
             </div>
 
