more change for now

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				  <li><a href="index.html">Home</a></li>
 				  <li><a href="#">Projects</a></li>
 				  <li><a href="#publications">Publications</a></li> 
-				  <li><a href="#">CV</a></li> 
+				  <!-- <li><a href="#">CV</a></li> -->
 		  </ul>
 		</div>
 	  </div>
@@ -78,7 +78,7 @@
             <!-- Entries Column -->
             <div class="col-md-8" style="height: 100vh;">
 
-            <p>I am currently a Master's student (MASt) in Cambridge's Part III program studying theoretical physics. I am passionate about understanding emergence in condensed matter systems and numerical approaches for the quantum many-body problem.<a href="#">elit</a>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>I am currently a Master's student (MASt) in Cambridge's Part III program studying theoretical physics. I am passionate about understanding emergence in condensed matter systems and numerical approaches for the quantum many-body problem.
             
             <p>I carried out my Bacherlors at the University of Berkeley, participating in research in both soft and hard condensed matter under Edgar Knobloch, Michael Zaletel, and Joel Moore.</p>
             
