changed title font

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
-              <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Mathi Raja</b></div><br>
+              <div style="font-family: inherit; font-size: inherit;"><b>Mathi Raja</b></div><br>
               <img src="img/mathi_prof_pic.jpg" alt="Profile Picture" style="width:90%; margin-top:10px; border-radius:5px;">
               <!--<p><b>mailrmathi@gmail.com</b><br>-->
               <br>
