--- a/index.html
+++ b/index.html
@@ -96,10 +96,15 @@
                 <ul>
                 <li class="paper" words="superconductivity, lattice models, Hubbard model, tensor networks"><a href="/Papers/Senior_Honors_Thesis.pdf">An Investigation into Models of Cuprate Superconductivity</a>. Senior Honors Thesis under Professor Joel Moore at UC Berkeley</li>
                 <li class="paper" words="particle physics, colliders, dark matter"><a href="/Papers/h190_paper.pdf">Liquid Xenon Detectors for Dark Matter Searches</a>. Expository report for honors class</li>
+                <li class="paper" words=""><a href="/Papers/h190_paper.pdf">Rouché's Theorem</a>. Expository paper for Complex Analysis</li>
+                </ul>
+                <strong>Presentations</strong><br/>
+                <ul>
+                <li class="poster" words=""><a href="/Posters/BPURS_Poster_Sp_24_MFT.pdf">A Mean-Field Approach for Ladder Superconductivity</a>. BPURS Poster Session Spring 2024</li>
+                <li class="poster" words=""><a href="/Posters/Pi2_Poster Fall 2023_ Quantum Geo.pdf">Quantum geometry and the stability of fractional Chern insulators</a>. Pi2 Poster Session Fall 2023</li>
+                <li class="poster" words=""><a href="/Posters/BPURS_Poster_Spring 2023_SH.pdf">Collisions of localized patterns in a nonvariational Swift-Hohenberg equation</a>. BPURS Poster Session Spring 2023</li>
                 </ul>
             </div>
-
-            
         </div>
 
 
