--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
               <img src="img/mathi_prof_pic.jpg" alt="Profile Picture" style="width:90%; margin-top:10px; border-radius:5px;">
               <!--<p><b>mailrmathi@gmail.com</b><br>-->
               <br>
+              <div style="height: 50px;"></div>
               <dd>
                   <a href="https://github.com/mathiraja0" target="_blank" style="text-decoration: none;">
                       <i class="fab fa-github"></i> GitHub
@@ -76,7 +77,7 @@
             
 
             <!-- Entries Column -->
-            <div class="col-md-8" style="height: 100vh;">
+            <div class="col-md-8" style="height: 100vh; margin-top: 100px;">
 
             <p>I am currently a Master's student (MASt) in Cambridge's Part III program studying mathematics with a concentration in theoretical physics. I am passionate about understanding emergence in condensed matter systems and numerical approaches for the quantum many-body problem.
             
