--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <ul>
                 <li class="paper" words="superconductivity, lattice models, Hubbard model, tensor networks"><a href="/Papers/Senior_Honors_Thesis.pdf">An Investigation into Models of Cuprate Superconductivity</a>. Senior Honors Thesis under Professor Joel Moore at UC Berkeley</li>
                 <li class="paper" words="particle physics, colliders, dark matter"><a href="/Papers/h190_paper.pdf">Liquid Xenon Detectors for Dark Matter Searches</a>. Expository report for honors class</li>
-                <li class="paper" words=""><a href="/Papers/h190_paper.pdf">Rouché's Theorem</a>. Expository paper for Complex Analysis</li>
+                <li class="paper" words=""><a href="/Papers/Math_185_Expository_Term_Paper.pdf">Rouché's Theorem</a>. Expository paper for Complex Analysis</li>
                 </ul>
                 <strong>Presentations</strong><br/>
                 <ul>
