added pi2 report

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                 <li class="paper" words="superconductivity, lattice models, Hubbard model, tensor networks"><a href="/Papers/Senior_Honors_Thesis.pdf">An Investigation into Models of Cuprate Superconductivity</a>. Senior Honors Thesis under Professor Joel Moore at UC Berkeley</li>
                 <li class="paper" words="particle physics, colliders, dark matter"><a href="/Papers/h190_paper.pdf">Liquid Xenon Detectors for Dark Matter Searches</a>. Expository report for honors class</li>
                 <li class="paper" words=""><a href="/Papers/Math_185_Expository_Term_Paper.pdf">Rouché's Theorem</a>. Expository paper for Complex Analysis</li>
-                </ul>
+                <li class="paper" words=""><a href="Papers/Pi2_Program__Quantum_geometry_and_the_stability_of_fractional_Chern_insulators.pdf">Quantum Geometry and the stability of FCIs</a>. Pi2 report for FCI project</li>
+              </ul>
                 <strong>Presentations</strong><br/>
                 <ul>
                 <li class="poster" words=""><a href="/Posters/BPURS_Poster_Sp_24_MFT.pdf">A Mean-Field Approach for Ladder Superconductivity</a>. BPURS Poster Session Spring 2024</li>
